hw8,9,10
